2012-10-02  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* digipeater.c:
	    Correct analysis of first "via" field, bail out of the loop
	    only after it has been parsed.

2012-10-01  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* debian/postinst, debian/aprx.init:
	    Removed postinst from debian installations.  That script is
	    bad and causes install/upgrade to stall.  Modernized the
	    aprx init-script.

2012-09-30  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, digipeater.c, interface.c, pbuf.h, pbuf.c, parse_aprs.c:
	    Sync pbuf_new() implementation with aprsc's approach, and
	    sync parse_aprs() with aprsc's code.  This should fix some
	    strange MICe bugs, among others.

2012-09-18  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* parse_aprs.c:
	    Corrected MICe longitude degrees parser. Again.
	    (Sorry, F4FXL's parser fix was wrong.)

2012-09-05  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* apparmor.aprx, debian/rules, debian/dirs, debian/postint:
	    Copied bits of Aprsc's debian packaging to Aprx.
	    (Original packaging stuff was copied from Aprx to Aprsc.)

2012-09-02  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.8.in, aprx.conf.in, aprx-complex.conf.in, aprx-rxigate.conf.in,
	  configure.in:
	    Exterminated all instances of yours truly's own address from
	    the sample configurations, and replaced them with 0000.00N
	    00000.00E coordinate, which aprs.fi treats as invalid.

	* beacon.c:
	    In addition to the long time used qTYPE_LOCALGEN, added on
	    APRSIS beacons also  ",TCPIP*" at the tail of whatever is
	    being sent.  Pete is not happy with q-code alone...

2012-08-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* digipeater.c, interface.c, aprx.h, TODO, aprx-manual.*:
	    Add to APRSIS tx-gated packets optionally different via-path
	    (parameter: msg-path) for message packets, than for any other